fixtures/invalid/module-boundary-transitive/src/features/tasks/shared/task.ts
import type { ServerSecret } from "../server/secret.js";

export const taskContract: ServerSecret | undefined = undefined;
